@@ -29,6 +29,8 @@ Changes between 1.2.1 and 1.2.0
 
 - fix issue63: assume <40 columns to be a bogus terminal width, default to 80
 
+- fix pdb debugging to be in the correct frame on raises-related errors 
+
 - update apipkg.py to fix an issue where recursive imports might
   unnecessarily break importing 
 
